--- a/frontend/css/snake.css
+++ b/frontend/css/snake.css
@@ -16,7 +16,7 @@ body {
   }
 
   .left{
-    background-color: tomato;
+    background-color: rgb(254, 95, 67);
     width : 50;
     height: 30;
     color: black;
